Deduplicate white/black colors